@@ -9,6 +9,7 @@ Version 2.1.0 - SVN
    where we rely on bash-specific features.
  - Fixes to judge/compare.c for better handling of strange newlines and
    printing first difference summary as first line.
+ - Allow admins to rejudge PENDING/CORRECT submissions (Closes: #1766222).
 
 Version 2.0.0 - SVN
 -------------------
